[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Drops/Drop.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 34.0238

[sub_resource type="CircleShape2D" id=2]
radius = 5.0

[node name="Drop" type="RigidBody2D"]
gravity_scale = 0.0
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="PullArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PullArea"]
shape = SubResource( 1 )

[node name="PickArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickArea"]
shape = SubResource( 2 )

[connection signal="body_entered" from="PullArea" to="." method="_on_PullArea_body_entered"]
[connection signal="body_exited" from="PullArea" to="." method="_on_PullArea_body_exited"]
[connection signal="body_entered" from="PickArea" to="." method="_on_PickArea_body_entered"]
